// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nominate renders checked with dismissal info when verified third party 1`] = `
<React.Fragment>
  <Button
    id="NominateButton"
    onClick={[Function]}
  >
    <Icon
      icon={
        Object {
          "id": "vtp",
        }
      }
    />
    Verified Third Party
    <Checkbox
      checked={true}
      skin="Toggle"
    />
  </Button>
  <Dialog
    actions={
      Array [
        Object {
          "buttonText": "Cancel",
          "buttonVariant": "secondary",
          "callback": [Function],
          "id": "cancel",
        },
        Object {
          "buttonText": "Confirm",
          "buttonVariant": "primary",
          "callback": [Function],
          "disabled": false,
          "id": "submit",
        },
      ]
    }
    show={false}
    size="lg"
  >
    <React.Fragment>
      <h3>
        Verified Third Party Dismissal
      </h3>
      <p>
        The person linked to this Identity LOC has the status of Verified Third Party.
      </p>
      <p>
        You are about to cancel this status: this person will not be able to contribute to all the LOC (s)he is currently involved with.
      </p>
      <p>
        Do you confirm you want to cancel the Verified Third Party status for this person?
      </p>
    </React.Fragment>
  </Dialog>
</React.Fragment>
`;

exports[`Nominate renders unchecked with nomination info when not verified third party 1`] = `
<React.Fragment>
  <Button
    id="NominateButton"
    onClick={[Function]}
  >
    <Icon
      icon={
        Object {
          "id": "vtp",
        }
      }
    />
    Verified Third Party
    <Checkbox
      checked={false}
      skin="Toggle"
    />
  </Button>
  <Dialog
    actions={
      Array [
        Object {
          "buttonText": "Cancel",
          "buttonVariant": "secondary",
          "callback": [Function],
          "id": "cancel",
        },
        Object {
          "buttonText": "Confirm",
          "buttonVariant": "primary",
          "callback": [Function],
          "disabled": false,
          "id": "submit",
        },
      ]
    }
    show={false}
    size="lg"
  >
    <React.Fragment>
      <h3>
        Verified Third Party Nomination
      </h3>
      <p>
        The person linked to this Identity LOC is about to have the status of Verified Third Party.
      </p>
      <p>
        With that status, you (and only you) will be able to select that nominated Verified Third Party in a LOC to contribute as a trustable source of public data and confidential documents. You will still have to validate these contributions before blockchain publication.
      </p>
      <p>
        Do you confirm you want to make this person a Verified Third Party?
      </p>
    </React.Fragment>
  </Dialog>
</React.Fragment>
`;
